bk_ida/bzip2ida/c3/BZ2_compressBlock
/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/BZ2_compressBlock/src/compress.c:1514:44: error: use of undeclared identifier 'xmmword_41B150'
si128 = _mm_load_si128( ( const __m128i *)&xmmword_41B150); 
                                           ^
/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/BZ2_compressBlock/src/compress.c:1516:42: error: use of undeclared identifier 'xmmword_41B160'
v60 = _mm_load_si128( ( const __m128i *)&xmmword_41B160); 
                                         ^
/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/BZ2_compressBlock/src/compress.c:1517:42: error: use of undeclared identifier 'xmmword_41B170'
v61 = _mm_load_si128( ( const __m128i *)&xmmword_41B170); 
                                         ^
/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/BZ2_compressBlock/src/compress.c:1518:42: error: use of undeclared identifier 'xmmword_41B180'
v62 = _mm_load_si128( ( const __m128i *)&xmmword_41B180); 
                                         ^
/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/BZ2_compressBlock/src/compress.c:1519:42: error: use of undeclared identifier 'xmmword_41B190'
v63 = _mm_load_si128( ( const __m128i *)&xmmword_41B190); 
                                         ^
/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/BZ2_compressBlock/src/compress.c:1520:42: error: use of undeclared identifier 'xmmword_41B1A0'
v64 = _mm_load_si128( ( const __m128i *)&xmmword_41B1A0); 
                                         ^
/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/BZ2_compressBlock/src/compress.c:1521:42: error: use of undeclared identifier 'xmmword_41B1B0'
v65 = _mm_load_si128( ( const __m128i *)&xmmword_41B1B0); 
                                         ^
/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/BZ2_compressBlock/src/compress.c:1522:42: error: use of undeclared identifier 'xmmword_41B1C0'
v66 = _mm_load_si128( ( const __m128i *)&xmmword_41B1C0); 
                                         ^
/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/BZ2_compressBlock/src/compress.c:1523:42: error: use of undeclared identifier 'xmmword_41B1D0'
v67 = _mm_load_si128( ( const __m128i *)&xmmword_41B1D0); 
                                         ^
/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/BZ2_compressBlock/src/compress.c:1542:44: error: use of undeclared identifier 'xmmword_41B150'
si128 = _mm_load_si128( ( const __m128i *)&xmmword_41B150); 
                                           ^
/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/BZ2_compressBlock/src/compress.c:1549:42: error: use of undeclared identifier 'xmmword_41B160'
v70 = _mm_load_si128( ( const __m128i *)&xmmword_41B160); 
                                         ^
/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/BZ2_compressBlock/src/compress.c:1550:42: error: use of undeclared identifier 'xmmword_41B170'
v71 = _mm_load_si128( ( const __m128i *)&xmmword_41B170); 
                                         ^
12 errors generated.
make: *** [/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/BZ2_compressBlock/src/obj/compress.o] Error 1
